tests/error/compile/var_undefined.wks
# @desc: Undefined variable detection
# @expect-error: Undefined variable

# Test undefined variable error
a "Test" +write %{{echo %(undefined_var)}}
